# pure-gestures

./: default.nix  pure-gestures.cabal
src/Pure/: Gestures.hs
src/Pure/Gestures/: Zoom.hs
src/Pure/Gestures/Internal/: Storage.hs  Touch.hs
