name:                pure-gestures
version:             0.8.0.0
synopsis:            Basic gestures support
homepage:            purehs.org/doc/pure-gesture
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-gestures.git

library
  exposed-modules:
    Pure.Gestures
    Pure.Gestures.Zoom

  other-modules:
    Pure.Gestures.Internal.Storage
    Pure.Gestures.Internal.Touch

  build-depends:
      base
    , pure
    , pure-lifted
    , pure-json
    , pure-txt
    , containers

  hs-source-dirs:      src
  default-language:    Haskell2010

